--- a/src/main/resources/templates/thank-you.html
+++ b/src/main/resources/templates/thank-you.html
@@ -8,5 +8,8 @@
 <body>
 <h2>Thank You for Your Feedback!</h2>
 <p>We appreciate your feedback. Thank you for taking the time to submit it.</p>
+<button class="btn border-secondary rounded-pill px-4 py-3 text-primary" type="button">
+    <a th:href="@{/travel/all}">Back</a>
+</button>
 </body>
 </html>
