--- a/src/main/resources/templates/userPageView.html
+++ b/src/main/resources/templates/userPageView.html
@@ -121,7 +121,7 @@
                             <td>
                                 <button th:if="${session.username.equals(travel.getDriverId().username)}"
                                         class="btn border-secondary rounded-pill px-4 py-3 text-primary" type="button">
-                                    <a href="#" th:href="@{/travel/candidate/{travelId}(travelId=${travel.id})}">Choice
+                                    <a href="#" th:href="@{/travel/candidate/{travelId}(travelId=${travel.id})}">Choose
                                         passenger</a>
                                 </button>
 
